--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-<h1>Hey, my name is Lunar.</h1>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portofolio Lunar</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #4a90e2;
+            color: white;
+            padding: 30px 20px;
+            text-align: center;
+        }
+
+        main {
+            padding: 20px;
+            max-width: 700px;
+            margin: auto;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            margin-top: -20px;
+            border-radius: 8px;
+        }
+
+        h1 {
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+        }
+
+        footer {
+            text-align: center;
+            padding: 15px;
+            background-color: #ddd;
+            margin-top: 40px;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Halo, Saya Lunar</h1>
+    <p>Selamat datang di portofolio saya!</p>
+</header>
+
+<main>
+    <h2>Tentang Saya</h2>
+    <p>Nama saya <strong>Lunar</strong>. Saya adalah seorang pelajar di <strong>SMP Al Irsyad Purwokerto</strong>.</p>
+    <p>Saya tinggal di <strong>Perum. Griya Satria Bantarsoka</strong>, tempat yang nyaman dan tenang.</p>
+    <p>Salah satu hobi saya adalah <strong>bermain sepak bola</strong>. Saya suka bermain bersama teman-teman di waktu luang.</p>
+</main>
+
+<footer>
+    &copy; 2025 Lunar. Semua hak dilindungi.
+</footer>
+
+</body>
+</html>
