--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+
+
+</body>
+</html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
@@ -7,13 +12,13 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: #f4f4f4;
+            background: #a8e6a3; /* warna hijau muda */
             margin: 0;
             padding: 0;
         }
 
         header {
-            background-color: #4a90e2;
+            background-color: #388e3c; /* hijau tua */
             color: white;
             padding: 30px 20px;
             text-align: center;
@@ -41,7 +46,7 @@
         footer {
             text-align: center;
             padding: 15px;
-            background-color: #ddd;
+            background-color: #c8e6c9; /* hijau muda untuk footer */
             margin-top: 40px;
         }
     </style>
@@ -66,3 +71,4 @@
 
 </body>
 </html>
+
