--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-
-
-</body>
-</html>
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -10,44 +6,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio Lunar</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #a8e6a3; /* warna hijau muda */
+        * {
+            box-sizing: border-box;
             margin: 0;
             padding: 0;
         }
 
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #e0f2e9; /* hijau sangat lembut */
+            color: #333;
+            line-height: 1.6;
+        }
+
         header {
-            background-color: #388e3c; /* hijau tua */
+            background-color: #2e7d32; /* hijau utama */
             color: white;
-            padding: 30px 20px;
+            padding: 40px 20px;
             text-align: center;
         }
 
-        main {
-            padding: 20px;
-            max-width: 700px;
-            margin: auto;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            margin-top: -20px;
-            border-radius: 8px;
-        }
-
-        h1 {
+        header h1 {
+            font-size: 36px;
             margin-bottom: 10px;
         }
 
-        p {
+        header p {
             font-size: 18px;
-            line-height: 1.6;
+        }
+
+        main {
+            background-color: #ffffff;
+            max-width: 800px;
+            margin: 30px auto;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        main h2 {
+            color: #2e7d32;
+            margin-bottom: 20px;
+            border-bottom: 2px solid #c8e6c9;
+            padding-bottom: 10px;
+        }
+
+        main p {
+            font-size: 18px;
+            margin-bottom: 15px;
         }
 
         footer {
             text-align: center;
-            padding: 15px;
-            background-color: #c8e6c9; /* hijau muda untuk footer */
-            margin-top: 40px;
+            padding: 20px;
+            background-color: #a5d6a7;
+            font-size: 14px;
+            color: #2e7d32;
         }
     </style>
 </head>
@@ -55,20 +69,23 @@
 
 <header>
     <h1>Halo, Saya Lunar</h1>
-    <p>Selamat datang di portofolio saya!</p>
+    <p>Selamat datang di portofolio pribadi saya</p>
 </header>
 
 <main>
     <h2>Tentang Saya</h2>
-    <p>Nama saya <strong>Lunar</strong>. Saya adalah seorang pelajar di <strong>SMP Al Irsyad Purwokerto</strong>.</p>
-    <p>Saya tinggal di <strong>Perum. Griya Satria Bantarsoka</strong>, tempat yang nyaman dan tenang.</p>
-    <p>Salah satu hobi saya adalah <strong>bermain sepak bola</strong>. Saya suka bermain bersama teman-teman di waktu luang.</p>
+    <p>Nama saya <strong>Lunar</strong>, seorang pelajar di <strong>SMP Al Irsyad Purwokerto</strong>.</p>
+    <p>Saya tinggal di <strong>Perum. Griya Satria Bantarsoka</strong>, sebuah lingkungan yang nyaman dan tenang.</p>
+    <p>Saya sangat menyukai <strong>bermain sepak bola</strong> sebagai hobi utama saya. Bermain bersama teman-teman memberikan saya semangat dan kebahagiaan.</p>
 </main>
 
 <footer>
-    &copy; 2025 Lunar. Semua hak dilindungi.
+    &copy; 2025 Lunar | Dibuat dengan ❤️ dan semangat belajar
 </footer>
 
 </body>
 </html>
+
+
+
 
