--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #e0f2e9; /* hijau sangat lembut */
+            background-color: #e0f2e9;
             color: #333;
             line-height: 1.6;
         }
 
         header {
-            background-color: #2e7d32; /* hijau utama */
+            background-color: #2e7d32;
             color: white;
             padding: 40px 20px;
             text-align: center;
@@ -76,7 +76,13 @@
     <h2>Tentang Saya</h2>
     <p>Nama saya <strong>Lunar</strong>, seorang pelajar di <strong>SMP Al Irsyad Purwokerto</strong>.</p>
     <p>Saya tinggal di <strong>Perum. Griya Satria Bantarsoka</strong>, sebuah lingkungan yang nyaman dan tenang.</p>
-    <p>Saya sangat menyukai <strong>bermain sepak bola</strong> sebagai hobi utama saya. Bermain bersama teman-teman memberikan saya semangat dan kebahagiaan.</p>
+
+    <h2>Hobi & Minat</h2>
+    <p>Saya sangat menyukai <strong>bermain sepak bola</strong>, baik secara langsung maupun di game.</p>
+    <p>Saya juga suka <strong>bermain game online</strong>, salah satunya adalah <strong>FC Mobile</strong>. Saat ini OVR saya adalah <strong>111</strong>, dan saya bangga akan itu!</p>
+    <p>Karena kecintaan saya pada sepak bola, saya juga sangat suka menonton <strong>Timnas Indonesia</strong>. Menyaksikan mereka bermain memberi saya semangat tersendiri.</p>
+    <p>Jika sedang santai atau gabut, saya biasanya membuka aplikasi seperti <strong>YouTube</strong> dan <strong>Instagram</strong> untuk mencari hiburan atau inspirasi.</p>
+    <p>Saya juga sangat menyukai menonton <strong>film</strong> atau <strong>movie</strong>, khususnya karya dari <strong>Studio Ghibli</strong> yang memiliki cerita dan animasi yang indah.</p>
 </main>
 
 <footer>
@@ -85,7 +91,3 @@
 
 </body>
 </html>
-
-
-
-
