--- a/index.html
+++ b/index.html
@@ -2,91 +2,93 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio Lunar</title>
-    <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Portofolio Lunar</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #e0f2e9;
-            color: #333;
-            line-height: 1.6;
-        }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      line-height: 1.6;
+      background: url('https://upload.wikimedia.org/wikipedia/commons/9/9f/Flag_of_Indonesia.svg') no-repeat center center fixed;
+      background-size: cover;
+      color: white;
+    }
 
-        header {
-            background-color: #2e7d32;
-            color: white;
-            padding: 40px 20px;
-            text-align: center;
-        }
+    header {
+      background-color: rgba(0, 0, 0, 0.6);
+      color: white;
+      padding: 40px 20px;
+      text-align: center;
+    }
 
-        header h1 {
-            font-size: 36px;
-            margin-bottom: 10px;
-        }
+    header h1 {
+      font-size: 36px;
+      margin-bottom: 10px;
+    }
 
-        header p {
-            font-size: 18px;
-        }
+    header p {
+      font-size: 18px;
+    }
 
-        main {
-            background-color: #ffffff;
-            max-width: 800px;
-            margin: 30px auto;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
+    main {
+      background-color: rgba(255, 255, 255, 0.9);
+      color: #333;
+      max-width: 800px;
+      margin: 30px auto;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
 
-        main h2 {
-            color: #2e7d32;
-            margin-bottom: 20px;
-            border-bottom: 2px solid #c8e6c9;
-            padding-bottom: 10px;
-        }
+    main h2 {
+      color: #b71c1c;
+      margin-bottom: 20px;
+      border-bottom: 2px solid #f8bbd0;
+      padding-bottom: 10px;
+    }
 
-        main p {
-            font-size: 18px;
-            margin-bottom: 15px;
-        }
+    main p {
+      font-size: 18px;
+      margin-bottom: 15px;
+    }
 
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #a5d6a7;
-            font-size: 14px;
-            color: #2e7d32;
-        }
-    </style>
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: rgba(183, 28, 28, 0.8);
+      font-size: 14px;
+      color: white;
+    }
+  </style>
 </head>
 <body>
 
 <header>
-    <h1>Halo, Saya Lunar</h1>
-    <p>Selamat datang di portofolio pribadi saya</p>
+  <h1>Halo, Saya Lunar</h1>
+  <p>Selamat datang di portofolio pribadi saya</p>
 </header>
 
 <main>
-    <h2>Tentang Saya</h2>
-    <p>Nama saya <strong>Lunar</strong>, seorang pelajar di <strong>SMP Al Irsyad Purwokerto</strong>.</p>
-    <p>Saya tinggal di <strong>Perum. Griya Satria Bantarsoka</strong>, sebuah lingkungan yang nyaman dan tenang.</p>
+  <h2>Tentang Saya</h2>
+  <p>Nama saya <strong>Lunar</strong>, seorang pelajar di <strong>SMP Al Irsyad Purwokerto</strong>.</p>
+  <p>Saya tinggal di <strong>Perum. Griya Satria Bantarsoka</strong>, sebuah lingkungan yang nyaman dan tenang.</p>
 
-    <h2>Hobi & Minat</h2>
-    <p>Saya sangat menyukai <strong>bermain sepak bola</strong>, baik secara langsung maupun di game.</p>
-    <p>Saya juga suka <strong>bermain game online</strong>, salah satunya adalah <strong>FC Mobile</strong>. Saat ini OVR saya adalah <strong>111</strong>, dan saya bangga akan itu!</p>
-    <p>Karena kecintaan saya pada sepak bola, saya juga sangat suka menonton <strong>Timnas Indonesia</strong>. Menyaksikan mereka bermain memberi saya semangat tersendiri.</p>
-    <p>Jika sedang santai atau gabut, saya biasanya membuka aplikasi seperti <strong>YouTube</strong> dan <strong>Instagram</strong> untuk mencari hiburan atau inspirasi.</p>
-    <p>Saya juga sangat menyukai menonton <strong>film</strong> atau <strong>movie</strong>, khususnya karya dari <strong>Studio Ghibli</strong> yang memiliki cerita dan animasi yang indah.</p>
+  <h2>Hobi & Minat</h2>
+  <p>Saya sangat menyukai <strong>bermain sepak bola</strong>, baik secara langsung maupun di game.</p>
+  <p>Saya juga suka <strong>bermain game online</strong>, salah satunya adalah <strong>FC Mobile</strong>. Saat ini OVR saya adalah <strong>111</strong>.</p>
+  <p>Saya juga sangat suka menonton <strong>Timnas Indonesia</strong>. Menyaksikan mereka bermain memberi saya semangat tersendiri.</p>
+  <p>Kalau sedang gabut, saya sering buka <strong>YouTube</strong> dan <strong>Instagram</strong>.</p>
+  <p>Saya juga sangat menyukai <strong>film</strong>, terutama karya <strong>Studio Ghibli</strong> yang penuh imajinasi dan keindahan visual.</p>
 </main>
 
 <footer>
-    &copy; 2025 Lunar | Dibuat dengan ❤️ dan semangat belajar
+  &copy; 2025 Lunar | Dibuat dengan ❤️ dan semangat belajar
 </footer>
 
 </body>
