--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
       text-align: center;
     }
 
+    header img {
+      width: 120px;
+      margin-bottom: 20px;
+    }
+
     header h1 {
       font-size: 36px;
       margin-bottom: 10px;
@@ -70,26 +75,11 @@
 <body>
 
 <header>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/9/9f/Flag_of_Indonesia.svg" alt="Logo Aqua">
   <h1>Halo, Saya Lunar</h1>
   <p>Selamat datang di portofolio pribadi saya</p>
 </header>
 
 <main>
   <h2>Tentang Saya</h2>
-  <p>Nama saya <strong>Lunar</strong>, seorang pelajar di <strong>SMP Al Irsyad Purwokerto</strong>.</p>
-  <p>Saya tinggal di <strong>Perum. Griya Satria Bantarsoka</strong>, sebuah lingkungan yang nyaman dan tenang.</p>
-
-  <h2>Hobi & Minat</h2>
-  <p>Saya sangat menyukai <strong>bermain sepak bola</strong>, baik secara langsung maupun di game.</p>
-  <p>Saya juga suka <strong>bermain game online</strong>, salah satunya adalah <strong>FC Mobile</strong>. Saat ini OVR saya adalah <strong>111</strong>.</p>
-  <p>Saya juga sangat suka menonton <strong>Timnas Indonesia</strong>. Menyaksikan mereka bermain memberi saya semangat tersendiri.</p>
-  <p>Kalau sedang gabut, saya sering buka <strong>YouTube</strong> dan <strong>Instagram</strong>.</p>
-  <p>Saya juga sangat menyukai <strong>film</strong>, terutama karya <strong>Studio Ghibli</strong> yang penuh imajinasi dan keindahan visual.</p>
-</main>
-
-<footer>
-  &copy; 2025 Lunar | Dibuat dengan ❤️ dan semangat belajar
-</footer>
-
-</body>
-</html>
+  <p>Nama saya <strong>Lunar
