--- a/index.html
+++ b/index.html
@@ -27,59 +27,13 @@
       text-align: center;
     }
 
-    header img {
-      width: 120px;
-      margin-bottom: 20px;
+    .header-title {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 15px;
+      flex-wrap: wrap;
     }
 
-    header h1 {
-      font-size: 36px;
-      margin-bottom: 10px;
-    }
-
-    header p {
-      font-size: 18px;
-    }
-
-    main {
-      background-color: rgba(255, 255, 255, 0.9);
-      color: #333;
-      max-width: 800px;
-      margin: 30px auto;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    main h2 {
-      color: #b71c1c;
-      margin-bottom: 20px;
-      border-bottom: 2px solid #f8bbd0;
-      padding-bottom: 10px;
-    }
-
-    main p {
-      font-size: 18px;
-      margin-bottom: 15px;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: rgba(183, 28, 28, 0.8);
-      font-size: 14px;
-      color: white;
-    }
-  </style>
-</head>
-<body>
-
-<header>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/9/9f/Flag_of_Indonesia.svg" alt="Logo Aqua">
-  <h1>Halo, Saya Lunar</h1>
-  <p>Selamat datang di portofolio pribadi saya</p>
-</header>
-
-<main>
-  <h2>Tentang Saya</h2>
-  <p>Nama saya <strong>Lunar
+    .header-title img {
+      width: 50px;
